syntax = "proto3";

option csharp_namespace = "SeasonsService";

import "google/protobuf/empty.proto";

package autumn;

service Autumn{
	rpc AddAutumn(AddAutumnRequest) returns (AddAutumnResponse);
}

message AddAutumnRequest{
	string autumnDate=1;
}

message AddAutumnResponse{
	Status status = 1;
	string sign = 2;
	string season = 3;

	enum Status{
		SUCCES=0;
		ERROR=1;
	}
}

